[package]
name = "visual"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0.0"
image = "0.25"
winit = { version = "0.30.5", features = ["rwh_06"] }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
mimalloc = "0.1"
arboard = "3.6.1"
fontdue = "0.9.3"
rustc-hash = "2.1.0"
